@@ -1,29 +1,16 @@
 /*
  * Copyright (c) 2018 Couchbase, Inc.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Use of this software is subject to the Couchbase Inc. Enterprise Subscription License Agreement
+ * which may be found at https://www.couchbase.com/ESLA-11132015.
  */
 
 package com.couchbase.client.encryption;
-
-import com.couchbase.client.encryption.utils.Base64;
-import com.couchbase.client.encryption.AES128CryptoProvider;
-import com.couchbase.client.encryption.JceksKeyStoreProvider;
 import org.junit.Assert;
 import org.junit.Test;
-
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
+import javax.xml.bind.DatatypeConverter;
 import java.security.SecureRandom;
 import java.util.Arrays;
 
@@ -41,8 +28,8 @@ public class JceksKeyStoreProviderTest {
         provider.publicKeyName(keyName);
         byte[] secret = provider.getKey(keyName);
         AES128CryptoProvider cryptoProvider = new AES128CryptoProvider(provider);
-        String encrypted = Base64.encode(cryptoProvider.encrypt("test".getBytes()));
-        String decrypted = new String(cryptoProvider.decrypt(Base64.decode(encrypted)));
+        String encrypted = DatatypeConverter.printBase64Binary(cryptoProvider.encrypt("test".getBytes()));
+        String decrypted = new String(cryptoProvider.decrypt(DatatypeConverter.parseBase64Binary(encrypted)));
         Assert.assertTrue(Arrays.equals(secret, secretKey.getEncoded()));
         Assert.assertEquals(decrypted, "test");
     }
